--- a/PetsAdoption/templates/create_pet.html
+++ b/PetsAdoption/templates/create_pet.html
@@ -4,7 +4,7 @@
 <div class="container my-5">
     <h1 class="text-center text-primary fw-bold">Agregar Nueva Mascota</h1>
 
-    <form method="POST" class="mt-4">
+    <form method="POST" class="mt-4" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="row">
             <div class="col-md-6 mx-auto">
@@ -35,6 +35,10 @@
                 <div class="mb-3">
                     {{ form.description.label_tag }}
                     {{ form.description }}
+                </div>
+                <div class="mb-3">
+                    {{ form.image.label_tag }}
+                    {{ form.image }}
                 </div>
                 <button type="submit" class="btn btn-success w-100">Guardar Mascota</button>
             </div>
