--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -14,7 +15,7 @@
             <h1 class="text-primary fw-bold">Pawer</h1>
             <nav>
                 <ul class="nav">
-                    <li class="nav-item"><a class="nav-link text-dark" href="{% url 'inicio'%}">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="{% url 'inicio'%}">{% trans "Inicio" %}</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="{% url 'pet_catalog' %}">Adopción</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="#">Tienda</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="#">Contacto</a></li>
