--- a/PetsAdoption/templates/detail_pet.html
+++ b/PetsAdoption/templates/detail_pet.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block content %}
 <div class="container my-5">
     <h1 class="text-center text-primary fw-bold">{{ pet.name }}</h1>
 
     <div class="card shadow-lg p-4">
-        <h2 class="text-secondary">Información de la Mascota</h2>
+        <h2 class="text-secondary">{% trans "Información de la Mascota" %}</h2>
         {% if pet.image %} <div class="text-center mb-4">
                 <img src="{{ pet.image.url }}" alt="{{ pet.name }}" class="img-fluid rounded" style="max-height: 300px;">
             </div>
@@ -15,13 +16,12 @@
             </div>
         {% endif %}
         <ul class="list-group list-group-flush">
-            <li class="list-group-item"><strong>Edad:</strong> {{ pet.age }} años</li>
-            <li class="list-group-item"><strong>Raza:</strong> {{ pet.species }}</li>
-            <li class="list-group-item"><strong>Tamaño:</strong> {{ pet.size }} cm</li>
-            <li class="list-group-item"><strong>Género:</strong> {{ pet.gender }}</li>
-            <li class="list-group-item"><strong>Espacio requerido:</strong> {{ pet.space_required }}</li>
-            <li class="list-group-item"><strong>Descripción:</strong> {{ pet.description }}</li>
-            <li class="list-group-item"><strong>Compatibilidad:</strong> {{ pet.compatibility }}</li>
+            <li class="list-group-item"><strong>{% trans "Edad:" %}</strong> {{ pet.age }} {% trans "año(s)" %}</li>
+            <li class="list-group-item"><strong>{% trans "Raza:" %}</strong> {{ pet.species }}</li>
+            <li class="list-group-item"><strong>{% trans "Tamaño:" %}</strong> {{ pet.size }} CM</li>
+            <li class="list-group-item"><strong>{% trans "Género:" %}</strong> {{ pet.gender }}</li>
+            <li class="list-group-item"><strong>{% trans "Espacio requerido:" %}</strong> {{ pet.space_required }}</li>
+            <li class="list-group-item"><strong>{% trans "Descripción:" %}</strong> {{ pet.description }}</li>
         </ul>
     </div>
 </div>
