--- a/PetsAdoption/templates/detail_pet.html
+++ b/PetsAdoption/templates/detail_pet.html
@@ -40,7 +40,7 @@
                        target="_blank" {# Open in a new tab #}
                        rel="noopener noreferrer"> {# Security best practice for target="_blank" #}
                         <i class="fab fa-whatsapp"></i> {% comment %} Optional: Add WhatsApp icon if using Font Awesome {% endcomment %}
-                        Adoptame
+                        {% trans "Adóptame" %}
                     </a>
                     {% endwith %}
                 {% endwith %}
