--- a/Users/templates/login.html
+++ b/Users/templates/login.html
@@ -1,18 +1,20 @@
 {% extends "base.html" %}
+{% load i18n %}
+
 {% block content %}
   <div class="container mt-5">
-      <h2>Iniciar Sesión</h2>
+      <h2>{% trans "Iniciar Sesión" %}</h2>
       <form method="post">
           {% csrf_token %}
           <div class="mb-3">
-              <label for="id_username" class="form-label">Usuario</label>
+              <label for="id_username" class="form-label">{% trans "Usuario" %}</label>
               <input type="text" name="username" id="id_username" class="form-control">
           </div>
           <div class="mb-3">
-              <label for="id_password" class="form-label">Contraseña</label>
+              <label for="id_password" class="form-label">{% trans "Contraseña" %}</label>
               <input type="password" name="password" id="id_password" class="form-control">
           </div>
-          <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+          <button type="submit" class="btn btn-primary">{% trans "Iniciar Sesión" %}</button>
       </form>
   </div>
 {% endblock %}
