--- a/templates/base.html
+++ b/templates/base.html
@@ -16,14 +16,13 @@
             <nav>
                 <ul class="nav">
                     <li class="nav-item"><a class="nav-link text-dark" href="{% url 'inicio'%}">{% trans "Inicio" %}</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark" href="{% url 'pet_catalog' %}">Adopción</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark" href="#">Tienda</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark" href="{% url 'pet_catalog' %}">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="{% url 'pet_catalog' %}">{% trans "Adopción" %}</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="{% url 'contact' %}">{% trans "Contacto" %}</a></li>
                     {% if user.is_authenticated %}
                         <!-- Si el usuario ha iniciado sesión, mostrar Logout -->
                         <li class="nav-item">
                             <a class="nav-link text-danger" href="{% url 'logout' %}" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">
-                                Logout
+                                {% trans "Cerrar sesión" %}
                             </a>
                             <form id="logout-form" method="post" action="{% url 'logout' %}" style="display: none;">
                                 {% csrf_token %}
@@ -31,8 +30,8 @@
                         </li>
                     {% else %}
                         <!-- Si el usuario NO ha iniciado sesión, mostrar Login y Signup -->
-                        <li class="nav-item"><a class="nav-link text-dark" href="{% url 'login' %}">Login</a></li>
-                        <li class="nav-item"><a class="nav-link text-dark" href="{% url 'signup' %}">Signup</a></li>
+                        <li class="nav-item"><a class="nav-link text-dark" href="{% url 'login' %}">{% trans "Iniciar sesión" %}</a></li>
+                        <li class="nav-item"><a class="nav-link text-dark" href="{% url 'signup' %}">{% trans "Registrarse" %}</a></li>
                     {% endif %}
                         <li class="nav-item"><form action="{% url 'set_language' %}" method="post" class="d-flex align-items-center ms-3">{% csrf_token %}
                         <input name="next" type="hidden" value="{{ request.get_full_path|slice:'3:' }}"> {# Adjust slicing based on your URL structure #}
