fix catalog filter

--- a/PetsAdoption/templates/catalog.html
+++ b/PetsAdoption/templates/catalog.html
@@ -13,9 +13,9 @@
             <div class="col-md-3">
                 <select name="species" class="form-select">
                     <option value="">{% trans "Filtrar por especie" %}</option>
-                    <option value="Perro" {% if request.GET.species == "Perro" %}selected{% endif %}>Perro</option>
-                    <option value="Gato" {% if request.GET.species == "Gato" %}selected{% endif %}>Gato</option>
-                    <option value="Ave" {% if request.GET.species == "Ave" %}selected{% endif %}>Ave</option>
+                    <option value="PERRO" {% if request.GET.species == "PERRO" %}selected{% endif %}>PERRO</option>
+                    <option value="GATO" {% if request.GET.species == "GATO" %}selected{% endif %}>GATO</option>
+                    <option value="AVE" {% if request.GET.species == "AVE" %}selected{% endif %}>AVE</option>
                 </select>
             </div>
             <div class="col-md-2">
